<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">


    <item
        android:id="@+id/inicio"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/opcion_inicio"
        app:showAsAction="always" />

    <item
        android:id="@+id/ver"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/opcion_ver"
        app:showAsAction="never" />

    <item android:id="@+id/ayuda"
        android:icon="@android:drawable/ic_menu_help"
        android:title="Ayuda"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/info"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/opcion_acerca"
        app:showAsAction="never" />

    <item
        android:id="@+id/salir"
        android:icon="@android:drawable/ic_lock_power_off"
        android:title="@string/opcion_salir"
        app:showAsAction="never" />

</menu>