<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerValoracion">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTituloValoracion"
            style="@style/titulos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/titulo_valoracion" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tvFecha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fecha"
                    android:focusable="false" />

                <EditText
                    android:id="@+id/etFecha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:ems="10"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/tvNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nombre" />

                <EditText
                    android:id="@+id/etNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:ems="10"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/tvEdad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/edad" />

                <EditText
                    android:id="@+id/etEdad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:ems="10"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/tvGenero"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/genero" />

                <Spinner
                    android:id="@+id/spGenero"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:entries="@array/combo_generos"
                    android:paddingLeft="5dp"
                    android:paddingTop="10dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="5dp" />

                <CheckBox
                    android:id="@+id/cbPrivacidad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text="@string/privacidad" />

                <TextView
                    android:id="@+id/tvValoracion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text="@string/pregunta" />

                <RadioGroup
                    android:id="@+id/rgOpciones"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="20dp">

                    <RadioButton
                        android:id="@+id/rbRespuesta1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/respuesta_1" />

                    <RadioButton
                        android:id="@+id/rbRespuesta2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/respuesta_2" />

                    <RadioButton
                        android:id="@+id/rbRespuesta3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/respuesta_3" />

                    <RadioButton
                        android:id="@+id/rbRespuesta4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/respuesta_4" />

                    <RadioButton
                        android:id="@+id/rbRespuesta5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/respuesta_5" />
                </RadioGroup>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btModificar"
                        style="@style/botones"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:text="@string/bt_modificar" />

                    <Button
                        android:id="@+id/btEliminar"
                        style="@style/botones"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:text="@string/bt_eliminar" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</RelativeLayout>