<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Entrenamiento">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvEscala"
            style="@style/titulos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/titulo_escala" />

        <TextView
            android:id="@+id/tvPregunta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:text="@string/pregunta" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <RadioGroup
                    android:id="@+id/rgOpciones"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="20dp">

                    <RadioButton
                        android:id="@+id/rbRespuesta1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/respuesta_1" />

                    <RadioButton
                        android:id="@+id/rbRespuesta2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/respuesta_2" />

                    <RadioButton
                        android:id="@+id/rbRespuesta3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/respuesta_3" />

                    <RadioButton
                        android:id="@+id/rbRespuesta4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/respuesta_4" />

                    <RadioButton
                        android:id="@+id/rbRespuesta5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/respuesta_5" />

                </RadioGroup>

                <Button
                    android:id="@+id/btGuardar"
                    style="@style/botones"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bt_guardar" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>


</RelativeLayout>